Bug 496611 - With more than one panel on the same side of the screen, the Panel Configuration window is drawn below the inner panels
Summary: With more than one panel on the same side of the screen, the Panel Configurat...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: 6.2.3
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-11-23 17:13 UTC by JR
Modified: 2024-12-13 15:57 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.0
Sentry Crash Report:


Attachments
Panel Configuration drawn below the inner panels of five panels on the same side of the screen (349.75 KB, image/png)
2024-11-23 17:13 UTC, JR
Details

Note You need to log in before you can comment on or make changes to this bug.
Description JR 2024-11-23 17:13:02 UTC
Created attachment 176064 [details]
Panel Configuration drawn below the inner panels of five panels on the same side of the screen

SUMMARY
If you have more than one Plasma panel docked to the same side of the screen, the Panel Configuration window (and edit mode widget tooltips) of any of the panels will be drawn below the inner panels (as in, all panels except the outermost one).

STEPS TO REPRODUCE
1. Add more than one panel, preferably several to make the behaviour more obvious
2. Align them to (for instance) the right of the screen
3. Right-click any one of them and pick Show Panel Configuration

OBSERVED RESULT
4. The Panel Configuration window is likely docked to the edge of the outermost panel, regardless of which panel it is for. It is drawn as below the other panels. Text is cut off, and in a pathological scenario the entire window is obscured. (Widget tooltips when in edit mode also suffer the same)

EXPECTED RESULT
4. The positioning (and/or strata) of the Panel Configuration window, as well as that of edit mode widget tooltips, should be such that they can be fully interacted with, even if you have more than one panel on that side of the screen

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:  EndeavourOS/Arch x86_64
KDE Plasma Version: 6.2.3
KDE Frameworks Version: 6.8.0
Qt Version: 6.8.0

ADDITIONAL INFORMATION
In the screenshot, note that I'm mouseovering the bluetooth widget, but its tooltip is drawn below the other panels and is completely obscured. The button to close the Panel Configuration window is also hidden.
Comment 1 Nate Graham 2024-11-25 21:04:50 UTC
Can confirm, we should fix this. At the same time, it's somewhat of a "doctor, it hurts when I bang my head against a wall" sort of thing. :) This isn't a panel arrangement anyone would actually have.
Comment 2 JR 2024-11-26 19:14:23 UTC
(In reply to Nate Graham from comment #1)
> Can confirm, we should fix this. At the same time, it's somewhat of a
> "doctor, it hurts when I bang my head against a wall" sort of thing. :) This
> isn't a panel arrangement anyone would actually have.

No. Though I found a small stacked autohiding panel might actually be useful, to hide seldom-used widgets but still keep them at hand. Sadly, tooltips of widgets on them spawn on top of the widget icon and break.
Comment 3 Bug Janitor Service 2024-12-12 13:05:40 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4995
Comment 4 Niccolò Venerandi 2024-12-13 11:39:13 UTC
Git commit 8e2401e6c613ae9b8b689ee97c2670be6d3db9c2 by Niccolò Venerandi.
Committed on 13/12/2024 at 11:38.
Pushed by niccolove into branch 'master'.

Handle available screen rect calculation separately for X11 and Wayland

This reverts commit 40f396524933dd91d62099a0a9b4df1afaca9b02 on Wayland.

Back then, the panels on the same screen edge would not stack, meaning that we
just had to take the tallest of them. Now they do stack, meaning we have to
take the sum of the thickness of the panels on each side.

M  +24   -4    shell/shellcorona.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/8e2401e6c613ae9b8b689ee97c2670be6d3db9c2