Handle available screen rect calculation separately for X11 and Wayland

This reverts commit 40f396524933dd91d62099a0a9b4df1afaca9b02 on Wayland.

Back then, the panels on the same screen edge would not stack, meaning that we
just had to take the tallest of them. Now they do stack, meaning we have to
take the sum of the thickness of the panels on each side.

BUG:496611